# estimator

./: Cargo.toml  build.rs  build_prod.sh  tailwind.config.js
assets/: site.webmanifest  style.css
src/: base.css  logging.rs  main.rs
src/pages/: auth.rs  mod.rs  projects.rs
templates/: app.html  hello.stpl  layout.html  layout.stpl
templates/auth/: login.html
templates/projects/: list.html
