[package]
name = "estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "http2", "macros", "headers"] }
clap = { version = "4.4.7", features = ["derive"] }
sailfish = "0.8.3"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
