[package]
name = "estimator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "http2", "macros", "headers"] }
axum-extra = "0.8.0"
sailfish = "0.8.3"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.4", features = ["fs", "tracing", "trace", "compression-full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
